# primes

./: .gitignore  CMakeLists.txt  LICENSE  chunk.c  chunk.h  job.c  job.h  main.c  state.c  state.h  thread.c  thread.h
